k8s/nginx-letsencrypt/http01-challenge/after-tls-ing-resource.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - dev.example.com
    secretName: dev-tls
  rules:
  - host: app.174.20.253.11.nip.io
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
        path: /
