k8s/nginx-letsencrypt/http01-challenge/before-tls-ing-resource.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: app.174.20.253.11.nip.io
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
        path: /
